[gd_scene load_steps=75 format=2]

[ext_resource path="res://Player_2/Player2.gd" type="Script" id=1]
[ext_resource path="res://PCs/Pc_necromancer.png" type="Texture" id=2]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Hit_Hurt_Boxes/HurtBox.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 0, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 0, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 64, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 128, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 192, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 256, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 320, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 384, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 448, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 512, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 0, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 64, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 128, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 192, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 256, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 320, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 384, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 448, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 512, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 64, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 128, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 192, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 256, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 320, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 384, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 448, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 27 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "Idle",
"speed": 3.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "MoveDown",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "MoveLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "MoveUp",
"speed": 6.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": true,
"name": "Spellcast",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=10]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 240 ]
}

[sub_resource type="Animation" id=8]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 216 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 272 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 192 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 192 ]
}

[sub_resource type="Animation" id=25]
resource_name = "SpellcastUp"
length = 1.9
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WalkDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 241, 242, 243, 244, 245, 246, 247, 248 ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 217, 218, 219, 220, 221, 222, 223, 224 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 265, 266, 267, 268, 269, 270, 271, 272 ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkUp"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 193, 194, 195, 196, 197, 198, 199, 200 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachine" id=17]
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 278, 84 )
states/Run/node = SubResource( 16 )
states/Run/position = Vector2( 535, 83 )
transitions = [ "Idle", "Run", SubResource( 19 ), "Run", "Idle", SubResource( 20 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[sub_resource type="CircleShape2D" id=26]
radius = 306.529

[sub_resource type="RectangleShape2D" id=67]
extents = Vector2( 5, 7.5 )

[sub_resource type="Theme" id=68]

[sub_resource type="StyleBoxFlat" id=69]
bg_color = Color( 0.85098, 0.137255, 0.137255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[sub_resource type="StyleBoxFlat" id=70]
bg_color = Color( 0.8, 0.811765, 0.45098, 0.505882 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[node name="FinalBoss" type="KinematicBody2D"]
position = Vector2( 129, 64 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
scale = Vector2( 0.46875, 0.46875 )
frames = SubResource( 29 )
animation = "Idle"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 10 )
anims/IdleLeft = SubResource( 8 )
anims/IdleRight = SubResource( 7 )
anims/IdleUp = SubResource( 9 )
anims/RESET = SubResource( 2 )
anims/SpellcastUp = SubResource( 25 )
anims/WalkDown = SubResource( 5 )
anims/WalkLeft = SubResource( 4 )
anims/WalkRight = SubResource( 6 )
anims/WalkUp = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 17 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 18 )
parameters/Idle/blend_position = Vector2( 0.0654349, -0.422414 )
parameters/Run/blend_position = Vector2( -0.000769794, 0 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -1, -13 )
scale = Vector2( 0.46337, 0.588214 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PlayerDet" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDet"]
shape = SubResource( 26 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -13 )
scale = Vector2( 0.46337, 0.588214 )
texture = ExtResource( 2 )
hframes = 24
vframes = 33
frame = 192
region_rect = Rect2( 7, 9, 827, 1355 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 15

[node name="Timer" parent="WanderController" index="0"]
one_shot = true
autostart = true

[node name="WalkTimer" type="Timer" parent="."]
autostart = true

[node name="stats" parent="." instance=ExtResource( 7 )]
max_health = 100

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
collision_layer = 16
collision_mask = 2
script = ExtResource( 8 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -8.5 )
shape = SubResource( 67 )

[node name="Timer" type="Timer" parent="HurtBox"]

[node name="Healthbar" type="ProgressBar" parent="."]
margin_left = -22.0
margin_top = -31.0
margin_right = 20.0
margin_bottom = -27.0
theme = SubResource( 68 )
custom_styles/fg = SubResource( 69 )
custom_styles/bg = SubResource( 70 )
value = 100.0
percent_visible = false

[connection signal="body_entered" from="PlayerDet" to="." method="_on_PlayerDet_body_entered"]
[connection signal="body_exited" from="PlayerDet" to="." method="_on_PlayerDet_body_exited"]
[connection signal="timeout" from="WanderController/Timer" to="WanderController" method="_on_Timer_timeout"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="timeout" from="HurtBox/Timer" to="HurtBox" method="_on_Timer_timeout"]

[editable path="PlayerDet"]
[editable path="WanderController"]
[editable path="stats"]
[editable path="HurtBox"]
